added the readme.me file

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ pandas = "*"
 scikit-learn = "==1.5.2"
 seaborn = "*"
 matplotlib = "*"
+flask = "*"
+waitress = "*"
+xgboost = "*"
 
 [dev-packages]
 
